tests/fw_rules_tests/policies/test14-networkpolicy.yaml
### Second network policy
### Allows traffic into default from (all pods in) the ibm-system-new namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-external-namespace
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            unique-label: ibm-system-newNameSpace
